# state-man

./: .gitignore  CMakeLists.txt  README.md
src/: character.cpp  character.hpp  main.cpp  main.hpp  state_mini.cpp  state_mini.hpp  state_naive.cpp  state_naive.hpp  states.hpp
